# ChangeLog for media-libs/libmtp
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/libmtp/ChangeLog,v 1.148 2014/08/10 21:09:56 slyfox Exp $

  10 Aug 2014; Sergei Trofimovich <slyfox@gentoo.org> libmtp-1.1.6-r1.ebuild,
  libmtp-9999.ebuild:
  QA: drop trailing '.' from DESCRIPTION

  20 May 2014; Manuel Rüger <mrueg@gentoo.org> libmtp-1.1.6-r1.ebuild,
  libmtp-9999.ebuild:
  Add ~arm keyword. Sync live ebuild.

  14 Mar 2014; Samuli Suominen <ssuominen@gentoo.org> -libmtp-1.1.6.ebuild:
  old

  14 Mar 2014; Samuli Suominen <ssuominen@gentoo.org> libmtp-1.1.6-r1.ebuild:
  ia64 stable wrt #503054

  14 Mar 2014; Agostino Sarubbo <ago@gentoo.org> libmtp-1.1.6-r1.ebuild:
  Stable for ppc64, wrt bug #503054

  05 Mar 2014; Agostino Sarubbo <ago@gentoo.org> libmtp-1.1.6-r1.ebuild:
  Stable for ppc, wrt bug #503054

  04 Mar 2014; Agostino Sarubbo <ago@gentoo.org> libmtp-1.1.6-r1.ebuild:
  Stable for x86, wrt bug #503054

  02 Mar 2014; Pacho Ramos <pacho@gentoo.org> libmtp-1.1.6-r1.ebuild:
  amd64 stable, bug #503054

  01 Mar 2014; Michał Górny <mgorny@gentoo.org> libmtp-1.1.6-r1.ebuild,
  libmtp-1.1.6.ebuild, libmtp-9999.ebuild:
  Update libgcrypt dep to use slot :0.

  01 Mar 2014; Jeroen Roovers <jer@gentoo.org> libmtp-1.1.6-r1.ebuild:
  Stable for HPPA (bug #503054).

*libmtp-1.1.6-r1 (23 Nov 2013)

  23 Nov 2013; Samuli Suominen <ssuominen@gentoo.org> +libmtp-1.1.6-r1.ebuild:
  Revision bump to propagate the change to the udev rule.

  23 Nov 2013; Samuli Suominen <ssuominen@gentoo.org> libmtp-1.1.6.ebuild,
  libmtp-9999.ebuild:
  Remove garbage from top of the udev rule wrt #481666 by Maxim Kammerer

  29 Aug 2013; Agostino Sarubbo <ago@gentoo.org> libmtp-1.1.6.ebuild:
  Stable for ia64, wrt bug #470512

  27 Aug 2013; Alexis Ballier <aballier@gentoo.org>
  files/libmtp-1.1.6-fbsdlibusb.patch:
  Fix a typo in patch description and add link to upstream bug report.
