@@ -1,16 +1,26 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA256
+Hash: SHA512
 
 AUX libmtp-1.1.6-fbsdlibusb.patch 590 SHA256 536752f2c171a8e4ab3dd2ea92a16e793f5f46dc8ba7d95450f8c1348879b02f SHA512 79f8cd0a52119e7d4e9d12d11dac24c4ed83397cbf93f94e666bfce5dc7a082edc35a6a01863fe761ff567fa084e13515e45037ed90a4f7f745a3a4dd08281f2 WHIRLPOOL bfe3b025619bf58b81a34ec1716e80edb700402564a5adcb43b90a5905c78a4c312e815a74a34e55fb9a770f01e7c74a6a322dc9005bb0c059a58e68bfd8b556
 DIST libmtp-1.1.6.tar.gz 733519 SHA256 3a1c1c83af91de4052eb54feb795c141b4c04a252e0031954ebbf6175970cb0a SHA512 fe6d9bc0621d6ad2325164585ec5f3e20824add5ee763d6d14ba7dbea6d2aacd75afa450627f3a03691c33ffb92675abebce64c3f8e32e8c2db511e814207ab3 WHIRLPOOL 176f2d64241735f2de33da4d84142debb2343aeb3abbd27a2af8e2a1815aa239c5f4ed9f38316bd2a8deb9d8faad4e293a5abae46e54d9137bfe8fcba279b371
-EBUILD libmtp-1.1.6-r1.ebuild 1511 SHA256 e43dab5cb85df5e3e6e0f23ccb552f76fcd73b8116ef3d36e436e7a411edb1d9 SHA512 292d0bf16099cd2f6db9c7c6eaca3be5912a49be90ac034c413c36bb96925bd7ee6c835b2b5a39d5ed216b5a76f83a75615bdf755aff416677c985a0d7e505b4 WHIRLPOOL 3e655bebb29cac32a6e170d4761335d2e531d87d6d308c24b4b7a4e8698c50b2ed1225e0ca87ec1e2d8ca0888b76a691b70e7ed7c2cb53ce467a6f84465cc394
-EBUILD libmtp-9999.ebuild 1469 SHA256 3328985e9d02b2c68033764a2f5a39e44314319ee2a411858cdbabf2f00f8b1e SHA512 dc95440f81bcb2788966c41ad045229d299af777ff6616d62a6a8354a2b3215221c9982cf9b3babd4d03731cf6e04db968afd4d21163547ed9e70d08d2696bbe WHIRLPOOL 3cfc7ddbb375d997035ae38d66a700ccc512551f5f5db42dd48a51963695cb8572603f611591d438504bf7913d27268a58ff836f4bafa0e60105b651346b8fe1
-MISC ChangeLog 18455 SHA256 073f65fa3ef0aa35860576cba7cc62c3aaee937a6671ebfe3666e99f9d962062 SHA512 4e63e07da450e1a9ace8a49d855606007f4b14026d4b2fce41d3540af9f34e9a186cfb4542118d186110de3f4bdc25b5dac86d3f87c47b5944b47fcb498d444e WHIRLPOOL 8568031c382dc42c775cababdbb9fd8e6efe06b3825152a116e475a5a8e65a028941775c3d4dc2ec93a523e7daa8abaef1bc3dfbf13ac47bb21dee4fb5c0df74
+EBUILD libmtp-1.1.6-r1.ebuild 1515 SHA256 9f7e3adeeb1128b79fb6637b087052214f49a7e9b8378ae1ec8176ec5b0616ec SHA512 c56d40bc9d49aaa8fc74fb73373b4f4e0660181489cade8d1723f63d0403afdfd604a76973a941cbab3fa519abd11fe43afb7aa770ec1a40db017b66b88efe25 WHIRLPOOL 81d2d6ff907ddd3a05696fa02a207fd3a7118d003d2016c7a93f3865843c7caebaa931f1315e5046948fb3bae247de0e978b383c76805e3ad228fdb61579cf19
+EBUILD libmtp-9999.ebuild 1473 SHA256 1e53cc179937ebb41b01cb11f0167d05643b729ae3d92ccae5ce5ed724487286 SHA512 8e7e6a14114d33b0974152af80f5c4c8470d4c3ba841b63eef0f3931d6bbdc4cfff4d6604b64280850c275daa18c679450405dadc296a60e97cafc0af3b730a5 WHIRLPOOL 6978b23a88d71d42d61cd591bfabc504d318c8a64af38fca706ddbbe3af3585460e1feccbd8ddc4935a904331449e0660e891b9b9f344d560e335b1b6c190d73
+MISC ChangeLog 18649 SHA256 9ba8c221c25e1ad571e62dec64e80d7cd5a4a20865d15963e05640f28f7ae79c SHA512 b58e50b14deb1cd3b6f084063fa9e2e11d39e948b2faece3c58bb1da60a1ac5e513716a474a7f2c5aebcf223bc1cd997bb45e5fa306bf219875711fd66ec9b8e WHIRLPOOL 435c8793f6c5547a3d8c2ee92eb934104e3f55861221cca92b7d0bee0e0b3391873d123165e91c5def090ba309da04cda4cc1827103feae96fbb828090e3c960
 MISC metadata.xml 158 SHA256 dfb5b47e6836db39fb187301dfcff1c2605e91d13d21db160806a563d8c75f9b SHA512 90f74979d228a35f81de50665ead63d228bc4f0d11f3def4832c9607f4242cbc4562db0a123bdcf2c4b6e0be78fc5565a65f75cdb53ed4c8d45544ebf74255dc WHIRLPOOL a90483bd4fa01ed5fa21bfe9f59c11b97c793146e3031eae342a3355c6dc2e4ef2b356af0bf711b5e16e16551c91d63ecdbb48e708df606017264e8bff5e9fe9
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iEYEAREIAAYFAlPn36UACgkQcaHudmEf86pHvACfd/gEU9pYM12639w6zuDhdMFR
-Z5kAnArnO6JL4DXAaEnusWR+1hHLZN3a
-=J58j
+iQIcBAEBCgAGBQJUEMlQAAoJEKXdFCfdEflKvF8P/AtnBfqabpD9FPgYLGwvw+qZ
+5zpn24CkrTIWnII1rPvw0qVCzB1YriuOnbjyHqND6bNxGRyiOcGXRqIHB8GExwec
+LxmAP/o9o+VQAiddJLxe7KzQbglEEKUI6lieY2N4fwt+asVPZONZgZt/XP7dkjNu
+EzUeR5Cat4SOO8E6M5Sq0RxarPQ/X4jKRGvpz/0owwwUKVSzegCtky3+S8yiW/kP
+zbPCTJvy7Eynvb0fyHvZEdgEbmZKdotlCMoN6hr6X9UG6xQfNqHKY/ueNvEhhjaQ
+LSH7i707QXgjKqcfpAY0VwKoQvVyzIMrZ3JxqwuN8Q68uPc3R2kcEdSa8JLRc97X
+t4ojisFTOWUqmCUI1W6qAAvtk6nrwlJwbyFt3rgofaS75y7ueWM0Mm5rLwcDZUhF
+5LLQNcIPWxnVHdY3fFLbw8+BYdtDHYorG5/uRJt6DKAmw9jHQj+AcIabhl+gfwAY
+tKm+nLdPpoyXnHqVK4YEYHXguHuRQ0OKhcf7QnfC9HoIiCCJv/bmmCoKcWxgoyLI
+XAbs1E1Kv5z7YghmnqBPsqoCUwJS3hlcyH67346zD+ft2871b7ALTram5jcCtkK0
+pPOe2PsxEv7TEdPw8kiSj2k7ay9PCMKotuA9vSQg+oR/MR2wTaE8WQ2Fuw+zmdbv
+6iqB52u88Vzcvsbu0T0j
+=AAkE
 -----END PGP SIGNATURE-----
